--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
   <head>
     <meta charset="UFT-8" />
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vidrio y Aluminio Gomez</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
