--- a/contacto.html
+++ b/contacto.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Contactos-Barberia Alura</title>
+    <title>Contactos-Vidrio y Aluminio Gomez</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <div class="caja">
-        <h1><img src="imagenes/logo.png" style="width: 100px; height: auto;"alt="logo de la barberia alura" /></h1>
+        <h1><img src="imagenes/logo.png" style="width: 100px; height: auto;"alt="logo de vidrio y aluminio" /></h1>
 
         <nav>
           <ul>
@@ -99,7 +99,7 @@
 
           <label class="checkbox"
             ><input type="checkbox" checked />Le gustaria recibir notificaciones
-            de la Barberia Alura</label
+            de Vidrio y Aluminio Gomez</label
           >
 
           <input type="submit" value="enviar formulario" class="enviar" />
@@ -130,8 +130,8 @@
     </header>
 
     <footer>
-      <img src="imagenes/logo-blanco.png" alt="logo de la barberia alura" />
-      <p>Copiright Barberia Alura 2024</p>
+      <img src="imagenes/logo-blanco.png" alt="logo de vidrio gomez" />
+      <p>Copiright Vidrio y Aluminio Gomez 2025</p>
     </footer>
   </body>
 </html>
