--- a/productos.html
+++ b/productos.html
@@ -1,58 +1,73 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Productos-Barberia Alura</title>
-    <link rel="stylesheet" href="reset.css"/>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <title>Productos - Soluciones en Vidrio y Aluminio</title>
+  <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header>
+    <div class="caja">
+      <h1>
+        <img src="imagenes/logo.png" style="width: 180px; height: auto;" alt="Logo" />
+      </h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="productos.html">Productos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-        <div class="caja">
-            <h1><img src="imagenes/logo.png" style="width: 180px; height: auto;"/></h1>
+  <main>
+    <ul class="productos">
+      <li>
+        <h2>Vidrio templado</h2>
+        <img src="imagenes/barba.jpg" alt="Vidrio templado">
+        <p class="descripcion">Barandales</p>
+        <p class="costo">Previa cotización</p>
+      </li>
+      <li>
+        <h2>Vidrio templado</h2>
+        <img src="imagenes/cancel.jpg" alt="Vidrio templado">
+        <p class="descripcion">Cancel</p>
+        <p class="costo">Previa cotización</p>
+      </li>
+      <li>
+        <h2>Vidrio templado</h2>
+        <img src="imagenes/escalera.jpg" alt="Vidrio templado">
+        <p class="descripcion">Barandal 2</p>
+        <p class="costo">Previa cotización</p>
+      </li>
+      <li>
+        <h2>Ventanas y Puertas</h2>
+        <img src="imagenes/puerta.jpg" alt="Ventanas y puertas">
+        <p class="descripcion">2 y 3 pulgadas</p>
+        <p class="costo">Previa cotización</p>
+      </li>
+      <li>
+        <h2>Ventanas y Puertas</h2>
+        <img src="imagenes/ventana.jpg" alt="Ventanas y puertas">
+        <p class="descripcion">2 y 3 pulgadas</p>
+        <p class="costo">Previa cotización</p>
+      </li>
+      <li>
+        <h2>Domos y Canceles</h2>
+        <img src="imagenes/cabello+barba.jpg" alt="Domos y canceles">
+        <p class="descripcion">Exteriores o para baño</p>
+        <p class="costo">Previa cotización</p>
+      </li>
+    </ul>
+  </main>
 
-            <nav>
-              <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="productos.html">Productos</a></li>
-                  <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
-
-    </header>
-
-    <main>
-      <ul class="productos">
-        <li>
-          <h2>Barba</h2>
-          <img src="imagenes/barba.jpg">
-          <p class="descripcion">Corte de barba</p>
-          <p class="costo">$ 10,00</p>
-        </li>
-
-        <li>
-          <h2>Cabello</h2>
-          <img src="imagenes/cabello.jpg">
-          <p class="descripcion">Corte de cabello</p>
-          <p class="costo">$ 8,00</p>
-        </li>
-
-        <li>
-          <h2>Cabello + Barba</h2>
-          <img src="imagenes/cabello+barba.jpg">
-          <p class="descripcion">Corte completo mas barba</p>
-          <p class="costo">$ 15,00</p>
-        </li>
-
-      </ul>
-    </main>
-
-<footer>
-  <img src="imagenes/logo-blanco.png">
-  <p>Copiright Barberia Alura 2024</p>
-</footer>
-
-  </body>
+  <footer>
+    <img src="imagenes/logo-blanco.png" alt="Logo blanco" />
+    <p>Copyright Vidrios y Aluminio Gomez 2025</p>
+  </footer>
+</body>
 </html>
+
