--- a/contacto.html
+++ b/contacto.html
@@ -2,14 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Contactos-Vidrio y Aluminio Gomez</title>
+    <title>Contactos - Vidrio y Aluminio Gomez</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <div class="caja">
-        <h1><img src="imagenes/logo.png" style="width: 100px; height: auto;"alt="logo de vidrio y aluminio" /></h1>
+        <h1>
+          <img src="imagenes/logo.png" style="width: 100px; height: auto;" alt="logo de vidrio y aluminio" />
+        </h1>
 
         <nav>
           <ul>
@@ -19,119 +21,99 @@
           </ul>
         </nav>
       </div>
-
-      <main>
-        <form>
-          <label for="nombreapellido">Nombre y Apellido</label>
-          <input
-            type="text"
-            id="nombreapellido"
-            class="input-padron"
-            required
-          />
-
-          <label for="correoelectronico">Correo Electronico</label>
-          <input
-            type="email"
-            id="correoelectronico"
-            class="input-padron"
-            required
-            placeholder="email@dominio"
-          />
-
-          <label for="numerotelefonico">Numero de Telefono</label>
-          <input
-            type="tel"
-            id="numerotelefonico"
-            class="input-padron"
-            required
-            placeholder="xxx-xxxxxxx"
-          />
-
-          <label form="Mensaje">Mensaje</label>
-          <textarea
-            cols="70"
-            rows="10"
-            id="mensaje"
-            class="input-padron"
-            required
-          ></textarea>
-
-          <fieldset>
-            <legend>Como gustaria que lo contactemos?</legend>
-
-            <label form="radio-email"
-              ><input
-                type="radio"
-                name="contacto"
-                value="Email"
-                id="radio-email"
-              />Email</label
-            >
-
-            <label form="radio-telefono"
-              ><input
-                type="radio"
-                name="contacto"
-                value="Telefono"
-                id="radio-telefono"
-              />Telefono</label
-            >
-
-            <label form="radio-whatsapp"
-              ><input
-                type="radio"
-                name="contacto"
-                value="Whatsapp"
-                id="radio-whatsapp"
-                checked
-              />Whatsapp</label
-            >
-          </fieldset>
-          <fieldset>
-            <legend>En que horario quiere ser atendido</legend>
-            <select>
-              <option>Manana</option>
-              <option>Tarde</option>
-              <option>Noche</option>
-            </select>
-          </fieldset>
-
-          <label class="checkbox"
-            ><input type="checkbox" checked />Le gustaria recibir notificaciones
-            de Vidrio y Aluminio Gomez</label
-          >
-
-          <input type="submit" value="enviar formulario" class="enviar" />
-        </form>
-        <table>
-          <thead>
-            <tr>
-              <th>Dia</th>
-              <th>Horario</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Lunes</td>
-              <td>8am a 8pm</td>
-            </tr>
-            <tr>
-              <td>Miercoles</td>
-              <td>8am a 8pm</td>
-            </tr>
-            <tr>
-              <td>Viernes</td>
-              <td>8am a 8pm</td>
-            </tr>
-          </tbody>
-        </table>
-      </main>
     </header>
+
+    <main>
+      <form action="https://formsubmit.co/riccardotflores@gmail.com.com" method="POST">
+        <!-- 🔁 Reemplaza tu-correo@email.com con tu correo real -->
+        <input type="hidden" name="_captcha" value="false" />
+        <input type="hidden" name="_next" value="https://tusitio.com/gracias.html" />
+
+        <label for="nombreapellido">Nombre y Apellido</label>
+        <input type="text" id="nombreapellido" name="nombreapellido" class="input-padron" required />
+
+        <label for="correoelectronico">Correo Electrónico</label>
+        <input
+          type="email"
+          id="correoelectronico"
+          name="correoelectronico"
+          class="input-padron"
+          required
+          placeholder="email@dominio.com"
+        />
+
+        <label for="numerotelefonico">Número de Teléfono</label>
+        <input
+          type="tel"
+          id="numerotelefonico"
+          name="numerotelefonico"
+          class="input-padron"
+          required
+          placeholder="XXX-XXXXXXX"
+        />
+
+        <label for="mensaje">Mensaje</label>
+        <textarea
+          cols="70"
+          rows="10"
+          id="mensaje"
+          name="mensaje"
+          class="input-padron"
+          required
+        ></textarea>
+
+        <fieldset>
+          <legend>¿Cómo te gustaría que te contactemos?</legend>
+          <label><input type="radio" name="contacto" value="Email" /> Email</label>
+          <label><input type="radio" name="contacto" value="Teléfono" /> Teléfono</label>
+          <label><input type="radio" name="contacto" value="Whatsapp" checked /> Whatsapp</label>
+        </fieldset>
+
+        <fieldset>
+          <legend>¿En qué horario quieres ser atendido?</legend>
+          <select name="horario">
+            <option value="Mañana">Mañana</option>
+            <option value="Tarde">Tarde</option>
+            <option value="Noche">Noche</option>
+          </select>
+        </fieldset>
+
+        <label class="checkbox">
+          <input type="checkbox" name="notificaciones" checked />
+          Me gustaría recibir notificaciones de Vidrio y Aluminio Gomez
+        </label>
+
+        <input type="submit" value="Enviar formulario" class="enviar" />
+      </form>
+
+      <table>
+        <thead>
+          <tr>
+            <th>Día</th>
+            <th>Horario</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Lunes</td>
+            <td>8am a 8pm</td>
+          </tr>
+          <tr>
+            <td>Miércoles</td>
+            <td>8am a 8pm</td>
+          </tr>
+          <tr>
+            <td>Viernes</td>
+            <td>8am a 8pm</td>
+          </tr>
+        </tbody>
+      </table>
+    </main>
 
     <footer>
       <img src="imagenes/logo-blanco.png" alt="logo de vidrio gomez" />
-      <p>Copiright Vidrio y Aluminio Gomez 2025</p>
+      <p>Copyright Vidrio y Aluminio Gomez 2025</p>
     </footer>
   </body>
 </html>
+
