--- a/contacto.html
+++ b/contacto.html
@@ -1,119 +1,143 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Contactos - Vidrio y Aluminio Gomez</title>
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="caja">
-        <h1>
-          <img src="imagenes/logo.png" style="width: 100px; height: auto;" alt="logo de vidrio y aluminio" />
-        </h1>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <title>Contactos - Vidrio y Aluminio Gomez</title>
+  <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      background: #f9f9f9;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+      font-family: "Montserrat", sans-serif;
+    }
 
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    .container h1 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
 
-    <main>
-      <form action="https://formsubmit.co/riccardotflores@gmail.com.com" method="POST">
-        <!-- 🔁 Reemplaza tu-correo@email.com con tu correo real -->
-        <input type="hidden" name="_captcha" value="false" />
-        <input type="hidden" name="_next" value="https://tusitio.com/gracias.html" />
+    .form-group {
+      margin-bottom: 20px;
+    }
 
-        <label for="nombreapellido">Nombre y Apellido</label>
-        <input type="text" id="nombreapellido" name="nombreapellido" class="input-padron" required />
+    .form-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
 
-        <label for="correoelectronico">Correo Electrónico</label>
-        <input
-          type="email"
-          id="correoelectronico"
-          name="correoelectronico"
-          class="input-padron"
-          required
-          placeholder="email@dominio.com"
-        />
+    .col {
+      flex: 1;
+    }
 
-        <label for="numerotelefonico">Número de Teléfono</label>
-        <input
-          type="tel"
-          id="numerotelefonico"
-          name="numerotelefonico"
-          class="input-padron"
-          required
-          placeholder="XXX-XXXXXXX"
-        />
+    .form-control {
+      width: 100%;
+      padding: 12px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+      font-family: inherit;
+    }
 
-        <label for="mensaje">Mensaje</label>
-        <textarea
-          cols="70"
-          rows="10"
-          id="mensaje"
-          name="mensaje"
-          class="input-padron"
-          required
-        ></textarea>
+    textarea.form-control {
+      resize: vertical;
+    }
 
-        <fieldset>
-          <legend>¿Cómo te gustaría que te contactemos?</legend>
-          <label><input type="radio" name="contacto" value="Email" /> Email</label>
-          <label><input type="radio" name="contacto" value="Teléfono" /> Teléfono</label>
-          <label><input type="radio" name="contacto" value="Whatsapp" checked /> Whatsapp</label>
-        </fieldset>
+    .btn {
+      display: block;
+      width: 100%;
+      padding: 15px;
+      background-color: #333;
+      color: #fff;
+      font-size: 18px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
 
-        <fieldset>
-          <legend>¿En qué horario quieres ser atendido?</legend>
-          <select name="horario">
-            <option value="Mañana">Mañana</option>
-            <option value="Tarde">Tarde</option>
-            <option value="Noche">Noche</option>
-          </select>
-        </fieldset>
+    .btn:hover {
+      background-color: #555;
+    }
 
-        <label class="checkbox">
-          <input type="checkbox" name="notificaciones" checked />
-          Me gustaría recibir notificaciones de Vidrio y Aluminio Gomez
-        </label>
+    @media screen and (max-width: 600px) {
+      .form-row {
+        flex-direction: column;
+      }
+    }
+  </style>
+</head>
 
-        <input type="submit" value="Enviar formulario" class="enviar" />
+<body>
+  <header>
+    <div class="caja">
+      <h1>
+        <img src="imagenes/logo.png" style="width: 100px; height: auto;" alt="logo de vidrio y aluminio" />
+      </h1>
+
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="productos.html">Productos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <div class="container">
+      <h1>Contáctanos</h1>
+      <form target="_blank" action="https://formsubmit.co/riccardotflores@gmail.com" method="POST">
+        <div class="form-group">
+          <div class="form-row">
+            <div class="col">
+              <input type="text" name="name" class="form-control" placeholder="Nombre Completo" required>
+            </div>
+            <div class="col">
+              <input type="email" name="email" class="form-control" placeholder="Correo Electrónico" required>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <textarea placeholder="Escribe tu mensaje aquí..." class="form-control" name="message" rows="10" required></textarea>
+        </div>
+        <button type="submit" class="btn">Enviar Mensaje</button>
       </form>
+    </div>
 
-      <table>
-        <thead>
-          <tr>
-            <th>Día</th>
-            <th>Horario</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Lunes</td>
-            <td>8am a 8pm</td>
-          </tr>
-          <tr>
-            <td>Miércoles</td>
-            <td>8am a 8pm</td>
-          </tr>
-          <tr>
-            <td>Viernes</td>
-            <td>8am a 8pm</td>
-          </tr>
-        </tbody>
-      </table>
-    </main>
+    <table>
+      <thead>
+        <tr>
+          <th>Día</th>
+          <th>Horario</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Lunes</td>
+          <td>8am a 8pm</td>
+        </tr>
+        <tr>
+          <td>Miércoles</td>
+          <td>8am a 8pm</td>
+        </tr>
+        <tr>
+          <td>Viernes</td>
+          <td>8am a 8pm</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
 
-    <footer>
-      <img src="imagenes/logo-blanco.png" alt="logo de vidrio gomez" />
-      <p>Copyright Vidrio y Aluminio Gomez 2025</p>
-    </footer>
-  </body>
+  <footer>
+    <img src="imagenes/logo-blanco.png" alt="logo de vidrio gomez" />
+    <p>Copyright Vidrio y Aluminio Gomez 2025</p>
+  </footer>
+</body>
 </html>
 
