--- a/contacto.html
+++ b/contacto.html
@@ -93,6 +93,7 @@
     <div class="container">
       <h1>Contáctanos</h1>
       <form target="_blank" action="https://formsubmit.co/riccardotflores@gmail.com" method="POST">
+      <input type="hidden" name="_next" value="https://riccardotflores.github.io/vidrioyaluminogomez/index.html">
         <div class="form-group">
           <div class="form-row">
             <div class="col">
