--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <div class="video">
         <div class="video-frame">
           <iframe id="videoPlayer"
-            src="https://www.youtube.com/embed/ZgiRVMIGC1g"
+            src="https://www.youtube.com/embed/yk3RDQa4P0vvzm7k"
             title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
