--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 
   <style>
-    /* Estilos generales */
     img {
       max-width: 100%;
       height: auto;
@@ -24,11 +23,16 @@
     }
 
     .video-frame {
-      aspect-ratio: 16 / 9;
-      width: 100%;
+      position: relative;
+      padding-bottom: 56.25%;
+      height: 0;
+      overflow: hidden;
     }
 
     .video-frame iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       border: none;
@@ -159,11 +163,11 @@
         <img src="diferenciales.jpg" class="imagenDiferencial" alt="imagen de trabajos" />
       </div>
 
-      <!-- Carrusel de videos -->
+      <!-- Riel de Videos -->
       <div class="video">
         <div class="video-frame">
           <iframe id="videoPlayer"
-            src="https://www.youtube.com/embed/ZgiRVMIGC1g"
+            src="https://www.youtube.com/embed/yk3RDQa4P0vvzm7k" 
             title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
@@ -184,9 +188,11 @@
 
   <script>
     const videoUrls = [
-      "https://www.youtube.com/embed/ZgiRVMIGC1g",
-      "https://www.youtube.com/embed/MdQpVLC7m30", // Shorts convertido
-      "https://www.youtube.com/embed/BtN-goy9VOY"
+      "https://www.youtube.com/embed/4rd4vRHcSDM",
+      "https://www.youtube.com/embed/MdQpVLC7m30",
+      "https://www.youtube.com/embed/168GKDKl9dI",
+      "https://www.youtube.com/embed/8cdLwZS9nq4",
+      "https://www.youtube.com/embed/72tXBetuMss"
     ];
 
     let videoIndex = 0;
