--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <div class="video">
         <div class="video-frame">
           <iframe id="videoPlayer"
-            src="https://www.youtube.com/embed/yk3RDQa4P0vvzm7k" 
+            src="https://www.youtube.com/embed/4rd4vRHcSDM"
             title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
@@ -188,7 +188,7 @@
 
   <script>
     const videoUrls = [
-      "https://www.youtube.com/embed/4rd4vRHcSDM",
+      "https://www.youtube.com/embed/4rd4vRHcSDM", // Este es el primer video (Short)
       "https://www.youtube.com/embed/MdQpVLC7m30",
       "https://www.youtube.com/embed/168GKDKl9dI",
       "https://www.youtube.com/embed/8cdLwZS9nq4",
