--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <style>
     img { max-width: 100%; height: auto; display: block; }
-    
-    /* 🔹 Comentarios sobre el banner */
+
+    /* 🔹 Comentarios integrados en banner */
     .comentarios-overlay {
       position: absolute;
       top: 15%;
@@ -26,7 +26,7 @@
       color: white;
       padding: 10px;
       border-radius: 8px;
-      z-index: 500;
+      z-index: 500; /* debajo del menú */
     }
     .comentario {
       background: rgba(255, 255, 255, 0.1);
@@ -39,16 +39,13 @@
     }
     .comentario p { margin: 0; flex: 1; }
     .comentario button {
-      background: red; color: white;
-      border: none; cursor: pointer;
-      padding: 3px 6px; border-radius: 4px;
-      margin-left: 10px;
+      background: red; color: white; border: none;
+      cursor: pointer; padding: 3px 6px; border-radius: 4px; margin-left: 10px;
     }
     textarea { width: 100%; margin-top: 10px; }
-    #formComentario button {
-      margin-top: 5px; padding: 5px 10px; cursor: pointer;
-    }
+    #formComentario button { margin-top: 5px; padding: 5px 10px; cursor: pointer; }
 
+    /* 🔹 El menú siempre visible arriba */
     header { position: relative; z-index: 1000; }
   </style>
 </head>
@@ -57,7 +54,7 @@
   <header>
     <div class="caja">
       <h1>
-        <img src="imagenes/logo.png" style="width: 50px; height: auto;" alt="Logo" />
+        <img src="imagenes/logo.png" style="width: 50px; height: auto;" />
       </h1>
       <nav>
         <ul>
@@ -84,8 +81,64 @@
   </div>
 
   <main>
-    <!-- CONTENIDO DE LA PÁGINA (SIN MODIFICAR) -->
-    <!-- Aquí va la sección principal, mapa y diferenciales como ya la tienes -->
+    <section class="principal">
+      <h2 class="tituloPrincipal">Sobre Vidrio y Aluminio Gomez</h2>
+      <img class="utensilios" src="utensilios[1].jpg" alt="utensilios de un barbero">
+
+      <p>
+        Ubicada en San Pablo Autopan,
+        <strong>Soluciones en Vidrio y Aluminio Gomez</strong> trae para el mercado lo
+        mejor para su hogar y negocio. Fundada en 2008, cuenta con cancelería de aluminio, fachadas y sistemas de cristal templado, entre otras cosas. 
+      </p>
+
+      <p id="mision">
+        <em>
+          Nuestra misión es:
+          <strong>"Proporcionar eficiencia, economía y calidad a nuestros clientes".</strong>
+        </em>
+      </p>
+
+      <p>
+        Ofrecemos profesionales experimentados que están constantemente
+        observando los cambios y movimiento en el mundo de la cancelería, para así
+        ofrecer a nuestros clientes las últimas tendencias. La constante actualización
+        por parte de nuestros trabajadores nos hace brindar excelencia y agilidad, garantizando calidad y
+        satisfacción.
+      </p>
+    </section>
+
+    <section class="mapa">
+      <h3 class="tituloPrincipal">Nuestra Ubicación</h3>
+      <p>Nuestro establecimiento está ubicado en San Pablo Autopan</p>
+      <div class="mapaContenido">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!4v1755183114469!6m8!1m7!1sQDyybB8MXeXDPR4yKU0Dsw!2m2!1d19.37172830916202!2d-99.65900973173885!3f253.42477900915722!4f-0.37270352146015284!5f0.7820865974627469"        
+          width="100%" 
+          height="300" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
+    </section>
+
+    <section class="diferenciales">
+      <h3 class="tituloPrincipal">Nuestro Distintivo</h3>
+
+      <div class="contenidoDiferenciales">
+        <ul class="listaDiferenciales">
+          <li class="items">Atención personalizada</li>
+          <li class="items">Presupuestos flexibles</li>
+          <li class="items">Localización</li>
+          <li class="items">Profesionales calificados</li>
+          <li class="items">Puntualidad</li>
+          <li class="items">Limpieza e higiene</li>
+          <li class="items">Trabajos garantizados</li>
+        </ul>
+        <img src="diferenciales.jpg" class="imagenDiferencial" alt="imagen de trabajos" />
+      </div>
+    </section>
   </main>
 
   <footer>
@@ -93,7 +146,7 @@
     <p>Copyright: Todo el material expuesto es propiedad de Vidrio y Aluminio Gomez 2025</p>
   </footer>
 
-  <!-- 🔹 Firebase SDKs -->
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
 
@@ -108,7 +161,6 @@
       appId: "1:8738704393:web:d40335060e366f01a47cd8"
     };
 
-    // Inicializar Firebase + Firestore
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
