--- a/contacto.html
+++ b/contacto.html
@@ -135,6 +135,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="productos.html">Productos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="videos.html">Videos</a></li>
         </ul>
       </nav>
     </div>
