--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 
   <style>
-    img { max-width: 100%; height: auto; display: block; }
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+    }
 
-    /* Comentarios sobre banner */
+    /* 🔹 Sección de comentarios sobre el banner */
     .comentarios-overlay {
       position: absolute;
       top: 15%;
@@ -20,14 +24,15 @@
       transform: translateX(-50%);
       width: 90%;
       max-width: 600px;
-      max-height: 70%;
+      max-height: 60vh; /* altura máxima según ventana */
       overflow-y: auto;
       background: rgba(0, 0, 0, 0.6);
       color: white;
       padding: 10px;
       border-radius: 8px;
-      z-index: 500;
+      z-index: 10; /* solo sobre la imagen, no sobre el main */
     }
+
     .comentario {
       background: rgba(255, 255, 255, 0.1);
       padding: 5px;
@@ -37,7 +42,10 @@
       justify-content: space-between;
       align-items: center;
     }
-    .comentario p { margin: 0; flex: 1; }
+    .comentario p {
+      margin: 0;
+      flex: 1;
+    }
     .comentario button {
       background: red;
       color: white;
@@ -47,10 +55,21 @@
       border-radius: 4px;
       margin-left: 10px;
     }
-    textarea { width: 100%; margin-top: 10px; }
-    #formComentario button { margin-top: 5px; padding: 5px 10px; cursor: pointer; }
+    textarea {
+      width: 100%;
+      margin-top: 10px;
+    }
+    #formComentario button {
+      margin-top: 5px;
+      padding: 5px 10px;
+      cursor: pointer;
+    }
 
-    header { position: relative; z-index: 1000; }
+    /* 🔹 Mantener menú siempre visible arriba */
+    header {
+      position: relative;
+      z-index: 1000;
+    }
   </style>
 </head>
 
@@ -71,7 +90,7 @@
     </div>
   </header>
 
-  <!-- Banner con comentarios -->
+  <!-- Banner con comentarios integrados -->
   <div style="position: relative;">
     <img class="banner" src="banner.jpg" alt="Banner principal" />
     <div class="comentarios-overlay">
@@ -85,7 +104,64 @@
   </div>
 
   <main>
-    <!-- resto del contenido intacto -->
+    <section class="principal">
+      <h2 class="tituloPrincipal">Sobre Vidrio y Aluminio Gomez</h2>
+      <img class="utensilios" src="utensilios[1].jpg" alt="utensilios de un barbero">
+
+      <p>
+        Ubicada en San Pablo Autopan,
+        <strong>Soluciones en Vidrio y Aluminio Gomez</strong> trae para el mercado lo
+        mejor para su hogar y negocio. Fundada en 2008, cuenta con cancelería de aluminio, fachadas y sistemas de cristal templado, entre otras cosas. 
+      </p>
+
+      <p id="mision">
+        <em>
+          Nuestra misión es:
+          <strong>"Proporcionar eficiencia, economía y calidad a nuestros clientes".</strong>
+        </em>
+      </p>
+
+      <p>
+        Ofrecemos profesionales experimentados que están constantemente
+        observando los cambios y movimiento en el mundo de la cancelería, para así
+        ofrecer a nuestros clientes las últimas tendencias. La constante actualización
+        por parte de nuestros trabajadores nos hace brindar excelencia y agilidad, garantizando calidad y
+        satisfacción.
+      </p>
+    </section>
+
+    <section class="mapa">
+      <h3 class="tituloPrincipal">Nuestra Ubicación</h3>
+      <p>Nuestro establecimiento está ubicado en San Pablo Autopan</p>
+      <div class="mapaContenido">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!4v1755183114469!6m8!1m7!1sQDyybB8MXeXDPR4yKU0Dsw!2m2!1d19.37172830916202!2d-99.65900973173885!3f253.42477900915722!4f-0.37270352146015284!5f0.7820865974627469"        
+          width="100%" 
+          height="300" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
+    </section>
+
+    <section class="diferenciales">
+      <h3 class="tituloPrincipal">Nuestro Distintivo</h3>
+
+      <div class="contenidoDiferenciales">
+        <ul class="listaDiferenciales">
+          <li class="items">Atención personalizada</li>
+          <li class="items">Presupuestos flexibles</li>
+          <li class="items">Localización</li>
+          <li class="items">Profesionales calificados</li>
+          <li class="items">Puntualidad</li>
+          <li class="items">Limpieza e higiene</li>
+          <li class="items">Trabajos garantizados</li>
+        </ul>
+        <img src="diferenciales.jpg" class="imagenDiferencial" alt="imagen de trabajos" />
+      </div>
+    </section>
   </main>
 
   <footer>
@@ -93,58 +169,50 @@
     <p>Copyright: Todo el material expuesto es propiedad de Vidrio y Aluminio Gomez 2025</p>
   </footer>
 
-  <!-- Firebase -->
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
 
   <script>
-    // 🔹 Config Firebase
+    // 🔹 Configuración de Firebase
     const firebaseConfig = {
-      apiKey: "AIzaSyAK5lHln3Xa-OjzO7QoE3U2THxJt59A7vE",
-      authDomain: "vidrio-aluminio-gomez.firebaseapp.com",
-      projectId: "vidrio-aluminio-gomez",
-      storageBucket: "vidrio-aluminio-gomez.firebasestorage.app",
-      messagingSenderId: "8738704393",
-      appId: "1:8738704393:web:d40335060e366f01a47cd8"
+      apiKey: "TU_API_KEY",
+      authDomain: "TU_DOMINIO.firebaseapp.com",
+      projectId: "TU_PROJECT_ID",
+      storageBucket: "TU_PROJECT_ID.appspot.com",
+      messagingSenderId: "TU_MESSAGING_SENDER_ID",
+      appId: "TU_APP_ID"
     };
 
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
-    const auth = firebase.auth();
-
-    // 🔹 Iniciar sesión como admin automáticamente
-    auth.signInWithEmailAndPassword("TU_EMAIL_ADMIN", "TU_PASSWORD_ADMIN")
-      .then(user => console.log("Admin logueado", user.user.uid))
-      .catch(err => console.error("Error login admin:", err));
 
     const form = document.getElementById("formComentario");
     const input = document.getElementById("nuevoComentario");
     const lista = document.getElementById("listaComentarios");
 
-    // Agregar comentario
-    form.addEventListener("submit", async e => {
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
       const texto = (input.value || "").trim();
       if (!texto) return;
+
       try {
         await db.collection("comentarios").add({
-          texto,
+          texto: texto,
           timestamp: firebase.firestore.FieldValue.serverTimestamp()
         });
         input.value = "";
       } catch (err) {
         console.error("Error al guardar:", err);
-        alert("No se pudo guardar el comentario.");
+        alert("No se pudo guardar el comentario. Intenta de nuevo.");
       }
     });
 
-    // Mostrar comentarios y permitir borrar solo al admin
     db.collection("comentarios")
       .orderBy("timestamp", "desc")
-      .onSnapshot(snap => {
+      .onSnapshot((snap) => {
         lista.innerHTML = "";
-        snap.forEach(doc => {
+        snap.forEach((doc) => {
           const data = doc.data();
           const div = document.createElement("div");
           div.className = "comentario";
@@ -155,15 +223,13 @@
           const btn = document.createElement("button");
           btn.textContent = "❌";
           btn.onclick = async () => {
-            const user = auth.currentUser;
-            if (user && confirm("¿Eliminar este comentario?")) {
-              try { await db.collection("comentarios").doc(doc.id).delete(); }
-              catch(err){ alert("Solo el admin puede eliminar"); }
+            if (confirm("¿Eliminar este comentario?")) {
+              await db.collection("comentarios").doc(doc.id).delete();
             }
           };
 
           div.appendChild(p);
-          if(auth.currentUser) div.appendChild(btn); // solo admin ve botón
+          div.appendChild(btn);
           lista.appendChild(div);
         });
       });
